📝 Changed: new content. Fixed: layout bugs

--- a/_sass/utilities/_flex.scss
+++ b/_sass/utilities/_flex.scss
@@ -58,7 +58,7 @@
 .u-flex-expand {
     display: block;
     flex: 1;
-    flex-basis: auto;
+    flex-basis: 100%;
 }
 
 .u-flex-shrink {
